[package]
name = "aliyun_rust_http_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
chrono = "0.4.31"
percent-encoding = "2.3.0"
ring = "0.17.3"
serde_json = "1.0.107"
url-escape = "0.1.1"
uuid = { version = "1.4.1", features = ["v4"] }